# fluxor_cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/examples/: mod.rs
src/examples/assets/: mod.rs
src/examples/cans/: mod.rs
src/examples/db/: mod.rs
src/examples/dotenv/: mod.rs
src/examples/fluxor/: mod.rs
src/examples/fluxor/assets/: manifest.json  service-worker.js
src/examples/fluxor/assets/css/: styles.css
src/examples/fluxor/assets/js/: alpine.min.js
src/examples/fluxor/components/: badge.rs  footer.rs  head.rs  header.rs  layout.rs  logo.rs  mod.rs  nav.rs  notfound.rs
src/examples/fluxor/components/scripts/: mod.rs  sw_register.rs
src/examples/fluxor/db/: mod.rs
src/examples/fluxor/helpers/: mod.rs
src/examples/fluxor/routes/: mod.rs
src/examples/fluxor/routes/api/: mod.rs
src/examples/fluxor/routes/api/greeting/: mod.rs
src/examples/fluxor/routes/pages/: home.rs  mod.rs
src/examples/fluxor/validators/: mod.rs
src/examples/hello_world/: mod.rs
src/examples/routes/: mod.rs
src/hello_world/: mod.rs
src/metadata/: mod.rs
src/routes/: mod.rs
src/utils/: mod.rs
